--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3.8'
-
 services:
   screenshot-service:
     build:
       context: .
       dockerfile: Dockerfile
+    platform: linux/amd64
     ports:
-      - '3000:8080'
+      - '8080:8080'
     environment:
       - NODE_ENV=production
     restart: unless-stopped
